--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Template_List)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Template_List main.cpp include/Array_List.hpp include/Linked_List.hpp)
+add_executable(Template_List main.cpp include/Array_List.hpp include/Linked_List.hpp include/Test_ArrayList.hpp)
